--- a/src/html/public/style.css
+++ b/src/html/public/style.css
@@ -1,3 +1,29 @@
 .error {
     color: red;
 }
+
+#message-textarea {
+    width : 500px;
+    height : 200px;
+}
+
+.logout {
+    text-align: right;
+}
+
+.current-user {
+    font-size : 30px;
+}
+
+.login {
+   color: cornflowerblue;
+}
+
+.chat {
+    border : 1px solid #CCCCCC;
+    width : 500px;
+    height : 200px;
+    overflow : auto;
+    padding : 5px 5px 5px 5px;
+    margin-bottom : 20px;
+}
